--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
                 <h2>Discover your next favorite pizza!</h2>
                 <a href="{{ url_for('signup') }}" class="btn-primary">Sign-Up</a>
                 <a href="{{ url_for('login') }}" class="btn-primary">Login</a>
+                <a href="{{ url_for('order') }}" class="btn-primary">order</a>
                
             </div>
         </div>
